TAG: pdfdownload-6-0-23-2
TAG: pdfdownload-6-0-23-1
DATE: 02/06/2024
STAFF: lec
wts2-1397/fl2-731/Migration to Rocky OS/backend/data loads
remove hard-coded python
#       modified:   pmc/download_pmc_papers.py
#       modified:   pmc/find_pdf_in_tar.py
#       modified:   pmc/identify_missed_papers_plos.py

TAG: pdfdownload-6-0-22-3
DATE: 09/xxi0815/2023
STAFF: sc
wts2-1269/fl2-506
Add another way to get publication date because some coming through w/o complete date:
k pubDate = artMetaE.find('pub-date/[@date-type="pub"]')

TAG: pdfdownload-6-0-22-2
TAG: pdfdownload-6-0-22-1
DATE: 02/15/2023
STAFF: sc
wts2-1122 - pmc/backPopulate.py - update pub-date code
 changed 'Exception:' to 'Warning:' in _runSearch method

TAG: pdfdownload-6-0-21-5
DATE: 12/20/2022
STAFF: sc
wts2-1056 remove eLife from PMC

TAG: pdfdownload-6-0-21-4
TAG: pdfdownload-6-0-21-3
TAG: pdfdownload-6-0-21-2
TAG: pdfdownload-6-0-21-1
DATE: 07/20/2022
STAFF: sc
wts2-941 - add journals to pmc/download_pmc_papers.py, also move/remove, see TR
Also: only send noPDFs log email to Nancy if running on prod
Also: logging pdf file name to pmc.diag.log (as is done for elsevier)

TAG: pdfdownload-6-0-20-13
TAG: pdfdownload-6-0-19-12
DATE: 07/04/2022
STAFF: sc
wts2-197 - 
    elsevier/SciDirectLib.py - set self.: _pmid, _pubType, _volume to "no" when execGetRequest returns 1
    shared/MapCache.py and elsevier/download_elsevier_papers.py added some debug, some commented out
        some not

TAG: pdfdownload-6-0-19-11
DATE: 06/30/2022
STAFF: sc
CHANGES: https://mgi-jira.atlassian.net/browse/WTS2-917 
        pdfdownload throwing yet another python Traceback
        appears some of the papers in the  new journals added
        do not have publication dates. Added testing for None
        in download_elsevier_papers.py

TAG: pdfdownload-6-0-19-10
TAG: pdfdownload-6-0-19-9
TAG: pdfdownload-6-0-19-8
DATE: 06/17/2022
STAFF: sc
CHANGES: https://mgi-jira.atlassian.net/browse/CRM-237 - added 14 new 