@@ -21,12 +21,6 @@
     <LI><A HREF="/data/loads/mgi/pdfdownload/logs/">PDF Downloader Logs (previous runs)</A>
   </OL>
 </LI>
-<LI>PLOS
-  <OL>
-    <LI><A HREF="/data/loads/mgi/pdfdownload/logs/identify_missed_papers_plos.sh.log">Overdue PLOS DOI IDs</A> - <I>not in PubMed Central, no
-	longer within timeframe of latest PLOS download</I>
-  </OL>
-</LI>
 </UL>
 
 <H3>Archives</H3>
